--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <button>8</button>
           <button>9</button>
           <button>0</button>
+          <button data-action="decimal">.</button>
+          <button data-action="clear">AC</button>
+          <button class="key--equal" data-action="calculate">=</button>
         </div>
       </div>
       
