--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button>0</button>
           <button data-action="decimal">.</button>
           <button data-action="clear">AC</button>
-          <button class="key--equal" data-action="calculate">=</button>
+          <button class="key--equal" data-action="operate">=</button>
         </div>
       </div>
       
