refactor and design changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button>9</button>
           <button>0</button>
           <button data-action="decimal">.</button>
-          <button data-action="clear">AC</button>
+          <button class="key--clear" data-action="clear">AC</button>
           <button class="key--equal" data-action="operate">=</button>
         </div>
       </div>
